2007-12-01  Dmitry Xmelkov  <dmix@gmail.ru>

	Make conversion from float to (u)long in error cases to be
	more similar with GCC/x86.
	* libm/fplib/fixunssfsi.S: New file.
	* libm/fplib/Files.am: Add new source fixunssfsi.S
	* libm/fplib/fixsfsi.S: Rewrite to use __fixunssfsi() function.
	* libm/fplib/lround.S: Unify result in error cases.
	* include/math.h: lround(): fix comment about return value.
	* tests/simulate/fplib/flt2long-01.c: Update overflow test cases.
	* tests/simulate/fplib/flt2ulng-01.c: Ditto.
	* tests/simulate/math/lround-01.c: Ditto.
	* NEWS: Note about this change.

2007-11-30  Eric B. Weddington  <eric.weddington@atmel.com>

	* doc/api/doxygen.config.in: Add avr/fuse.h to the doc list.

2007-11-30  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/fuse.h: Add documentation for Fuse API.

2007-11-28  Eric B. Weddington  <eric.weddington@atmel.com>

	Add new devices: ATmega1284P, ATmega32HVB.
	* configure.ac: Add new devices.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* NEWS: Update new devices list.
	* include/avr/iom1284p.h: New file.
	* include/avr/iom32hvb.h: New file.

2007-11-18  Dmitry Xmelkov  <dmix@gmail.ru>

	Add the benchmark page. Now this is only a start of work.
	* doc/api/bench.dox: New file.
	* doc/api/bench-libc.dox: New file.
	* doc/api/Makefile.am: Add new doxygen sources.
	* dod/api/doxygen.config.in: Ditto.
	* NEWS: Note about new doc page.

2007-11-11  Dmitry Xmelkov  <dmix@gmail.ru>

	Add new function lround().
	* libm/fplib/lround.S: New file.
	* libm/fplib/Files.am: Add new source lround.S
	* include/math.h: Add lround() function definition.
	* tests/simulate/math/lround-01.c: New file.
	* NEWS: Update new functions list.

2007-11-08  Eric B. Weddingotn  <eweddington@cso.atmel.com>

	Add new device: ATtiny88.